# dag-paths

./: .gitignore  2025-05-29_dag_run.txt  README.md  pyproject.toml
dags/: __init__.py
dags/analysis/: __init__.py  paths.py
dags/utils/: __init__.py  data.py  logging.py
data/: README.md  sample.csv  working.csv
